Set up pages and routes to each page.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,58 @@
 
 .read-the-docs {
   color: #888;
+} */
+/* Css reset */
+/* Box sizing rules */
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body, h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 0;
+}
+
+/* Remove default padding */
+ul, ol {
+  padding: 0;
+}
+
+/* Remove default list style */
+ul, ol {
+  list-style: none;
+}
+
+/* Set default font family and size */
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+}
+/* Css reset */
+
+:root{
+  --background-color-1: rgb(2, 2, 2);
+  --background-color-2: #0f0f0f;
+  --green-font-color: #25fd30;
+  --teal-font-color: rgb(127, 254, 254);
+  --yellow-font-color: rgb(255, 255, 113);
+  --purple-font-color: rgba(255, 150, 255, 1);
+  --orange-font-color: rgba(255, 204, 153, 1);
+  --standard-padding: 20px;
+  --standard-margin-bottom: 100px;
+  --standard-margin: 20px;
+}
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: black;
+  color: white;
 }
