--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,4 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 /* Css reset */
 /* Box sizing rules */
 *, *::before, *::after {
@@ -62,9 +21,15 @@ ul, ol {
 }
 
 /* Set default font family and size */
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* background-image: linear-gradient(45deg, hsl(240deg 100% 20%) 1%, hsl(260deg 100% 23%) 43%, hsl(279deg 100% 27%) 50%, hsl(298deg 100% 30%) 51%, hsl(318deg 100% 33%) 51%, hsl(337deg 100% 37%) 49%, hsl(357deg 100% 40%) 49%, hsl(16deg 100% 43%) 50%, hsl(36deg 100% 47%) 57%, hsl(55deg 100% 50%) 99%); */
+  background-image: url('./assets/images/city.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 /* Css reset */
 
@@ -82,15 +47,19 @@ body {
 }
 
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: monospace;
   background-color: black;
-  color: white;
+  color: #FFA500;
+  text-shadow: 0 0 5px #FFA500, /* Horizontal and vertical offset set to 0, 5px blur */
+               0 0 5px #FFA500, /* A wider blur for more glow */
+               0 0 5px #FF4500, /* Even wider and slightly darker orange for depth */
+               0 0 5px #FF4500;
 }
