--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -7,13 +7,8 @@
   /* Remove default margin */
   body, h1, h2, h3, h4, h5, h6, p, ul, ol {
     margin: 0;
-  }
-  
-  /* Remove default padding */
-  ul, ol {
     padding: 0;
   }
-  
   /* Remove default list style */
   ul, ol {
     list-style: none;
@@ -21,34 +16,12 @@
   
   /* Set default font family and size */
   body {
-    font-family: Arial, sans-serif;
+    font-family: monospace;
     font-size: 16px;
   }
-/* Css reset */
 
-:root{
-    --background-color-1: rgb(2, 2, 2);
-    --background-color-2: #0f0f0f;
-    --green-font-color: #25fd30;
-    --teal-font-color: rgb(127, 254, 254);
-    --yellow-font-color: rgb(255, 255, 113);
-    --purple-font-color: rgba(255, 150, 255, 1);
-    --orange-font-color: rgba(255, 204, 153, 1);
-    --standard-padding: 20px;
-    --standard-margin-bottom: 100px;
-    --standard-margin: 20px;
-}
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+  
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
     background-color: black;
     color: white;
 }
