Added responsiveness to navbar, working on landing page tech icons

--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -1,27 +1,39 @@
 /* Css reset */
 /* Box sizing rules */
 *, *::before, *::after {
-    box-sizing: border-box;
-  }
-  
-  /* Remove default margin */
-  body, h1, h2, h3, h4, h5, h6, p, ul, ol {
-    margin: 0;
-    padding: 0;
-  }
-  /* Remove default list style */
-  ul, ol {
-    list-style: none;
-  }
-  
-  /* Set default font family and size */
-  body {
-    font-family: monospace;
-    font-size: 16px;
-  }
-
-  
-body {
-    background-color: black;
-    color: white;
+  box-sizing: border-box;
 }
+
+/* Remove default margin */
+body, h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 0;
+  padding: 0;
+}
+/* Remove default list style */
+ul, ol {
+  list-style: none;
+}
+
+/* Desktops and larger screens */
+body {
+  /* background-image: url('assets/images/irina-iriser-KQ75n3P8EJA-unsplash.jpg');
+  background-size: cover; */
+  background-color: black;
+  color: white;
+  font-family: monospace;
+  font-size: 16px;
+}
+
+/* Tablets and smaller screens */
+/* @media (max-width: 768px) {
+  body {
+      background-image: url('medium-image.jpg');
+  }
+} */
+
+/* Mobile devices */
+/* @media (max-width: 480px) {
+  body {
+    background-image: url('assets/images/irina-iriser-KQ75n3P8EJA-unsplash.jpg');
+  }
+} */
