--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,11 +1,11 @@
 .aboutSectionStyle {
     background-color: black;
+    text-align: center;
 }
 
 .aboutDivStyle {
-    text-shadow: 0px 0px 4px var(--purple-font-color);
-    max-width: 50rem;
-    margin: 5rem auto;
+    max-width: 70vw;
+    margin: 1rem auto 1rem;
 }
 
 .aboutH3Style, .aboutPStyle {
@@ -15,18 +15,29 @@
 
 .aboutImageDivStyle {
     display: flex;
-    padding: 1rem;
     justify-content: center;
     align-items: center;
+    margin: 1rem;
 }
 
 .aboutImageStyle {
-    background-size: cover;
-    background-position: center;
     max-width: 20rem;
     width: 100%; 
-    padding-top: 30%;
     height: auto;
-    margin: 0px 20px;
+    margin: 2rem;
     border-radius: 1rem;
+}
+
+.buttonStyle {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 24px;
+    letter-spacing: 2px;
+}
+
+@media (min-width: 450px) {
+    .aboutDivStyle {
+        margin: 10rem auto 1rem;
+    }
 }
